--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "immer": "^10.0.2",
     "mongoose": "^7.5.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
