--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "immer": "^10.0.2",
+    "moment": "^2.29.4",
     "mongoose": "^7.5.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
