--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,9 @@ on:
   push:
     branches:
       - main
+  release:
+    types:
+      - 'published'
 jobs:
   Deploy-Production:
     runs-on: ubuntu-latest
