--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@typegoose/typegoose": "^11.5.0",
+    "@types/lodash": "^4.14.199",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -20,7 +21,9 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "immer": "^10.0.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "mongodb": "^6.1.0",
     "mongoose": "^7.5.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
@@ -29,7 +32,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.10.1",
+    "react-icons": "^4.11.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "zod": "^3.22.2"
