--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test:watch": "jest --watchAll"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.427.0",
+    "@aws-sdk/lib-storage": "^3.427.0",
+    "@aws-sdk/s3-request-presigner": "^3.427.0",
     "@hookform/resolvers": "^3.3.1",
     "@typegoose/typegoose": "^11.5.0",
     "@types/lodash": "^4.14.199",
@@ -32,11 +35,13 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
+    "uuid": "^9.0.1",
     "zod": "^3.22.2"
   },
   "devDependencies": {
@@ -45,6 +50,7 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/bcryptjs": "^2.4.3",
     "@types/jest": "^29.5.5",
+    "@types/uuid": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
