--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "recharts": "^2.9.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "uuid": "^9.0.1",
